# todo

./: README.md  stack.yaml  todo.cabal
app/: Main.hs
src/Todo/: ConsoleImpl.hs  HasCommandImpl.hs  Main.hs  Parts.hs  System.hs  Types.hs
test/Test/Todo/: HasCommandSpec.hs  MainSpec.hs
