name:                todo
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jxv/todo#readme
license:             BSD3
license-file:        LICENSE
author:              Joe Vargas
maintainer:          http://github.com/jxv
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Todo.Main
                       Todo.System
                       Todo.Parts
                       Todo.Types
                       Todo.HasCommandImpl
  build-depends:       base >= 4.7 && < 5
                     , transformers
                     , mtl
                     , safe
  default-language:    Haskell2010
  default-extensions:  GeneralizedNewtypeDeriving

executable todo-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , todo
  default-language:    Haskell2010

test-suite todo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , transformers
                     , mtl
                     , todo
                     , test-fixture
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  TemplateHaskell
                       TypeSynonymInstances
                       FlexibleInstances



source-repository head
  type:     git
  location: https://github.com/jxv/todo
